--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
