--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "accesscontrol": "^2.2.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "dotenv-extended": "^2.9.0",
